Post Cube website

--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="cs">
-
 <head>
 
   <!-- Google Tag Manager -->
@@ -43,8 +42,10 @@
 
   <!-- Stylizace -->
   <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/colors.css">
   <link rel="stylesheet" href="/assets/css/header.css">
   <link rel="stylesheet" href="/assets/css/typography.css">
+  <link rel="stylesheet" href="/assets/css/hp.css">
 </head>
 
 <body>
@@ -193,193 +194,57 @@
 
   </div>
 </section>
-<section id="how-it-works" class="how-it-works mdc-layout-grid">
+<section id="about-postCube" class="about-postCube mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell">
-      <svg width="229" height="154" viewBox="0 0 229 154" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0)">
-          <path
-            d="M114.5 137.72L113.179 136.4V135.96H112.738V136.4L111.417 137.72L84.1135 154H112.738H113.179H142.244L114.5 137.72Z"
-            fill="#2885AC"/>
-          <path d="M122.867 129.36H103.05V143H122.867V129.36Z" fill="black"/>
-          <path d="M37.4327 122.76V30.3598H113.179V12.7598H23.7808V133.32H113.179V122.76H37.4327Z" fill="#B1D2EE"/>
-          <path d="M202.137 12.7598H113.179V30.3598H188.485V122.76H113.179V133.32H202.137V12.7598Z" fill="#B1D2EE"/>
-          <path d="M192.008 27.28H34.7904V117.04H192.008V27.28Z" fill="white"/>
-          <path
-            d="M31.2673 22.8799V112.64V122.32H36.9923H188.485H194.21V112.64V22.8799H31.2673ZM37.4327 113.08V30.3599H188.925V112.64H37.4327V113.08Z"
-            fill="#383838"/>
-          <path
-            d="M124.629 89.3203H97.325C96.4442 89.3203 95.5635 88.4403 95.5635 87.5603C95.5635 86.6803 96.4442 85.8003 97.325 85.8003H123.308L130.794 59.8403C130.794 58.9603 131.675 58.5203 132.556 58.5203H143.565C144.446 58.5203 145.327 59.4003 145.327 60.2803C145.327 61.1603 144.446 62.0403 143.565 62.0403H133.877L126.39 88.0003C126.39 88.8803 125.51 89.3203 124.629 89.3203Z"
-            fill="#FFA800"/>
-          <path
-            d="M102.169 105.16C99.0865 105.16 96.4442 102.52 96.4442 99.4402C96.4442 96.3602 99.0865 93.7202 102.169 93.7202C105.252 93.7202 107.894 96.3602 107.894 99.4402C108.335 102.52 105.692 105.16 102.169 105.16ZM102.169 96.8002C100.848 96.8002 99.9673 97.6802 99.9673 99.0002C99.9673 100.32 100.848 101.2 102.169 101.2C103.49 101.2 104.371 100.32 104.371 99.0002C104.812 97.6802 103.49 96.8002 102.169 96.8002Z"
-            fill="#FFA800"/>
-          <path
-            d="M119.785 105.16C116.702 105.16 114.06 102.52 114.06 99.4402C114.06 96.3602 116.702 93.7202 119.785 93.7202C122.867 93.7202 125.51 96.3602 125.51 99.4402C125.51 102.52 122.867 105.16 119.785 105.16ZM119.785 96.8002C118.463 96.8002 117.583 97.6802 117.583 99.0002C117.583 100.32 118.463 101.2 119.785 101.2C121.106 101.2 121.987 100.32 121.987 99.0002C121.987 97.6802 121.106 96.8002 119.785 96.8002Z"
-            fill="#FFA800"/>
-          <path
-            d="M97.325 83.1611C96.8846 83.1611 96.4442 82.7211 96.0038 82.2811L88.9577 62.9211C88.9577 62.4811 88.9577 61.6011 89.8385 61.6011C90.2788 61.6011 91.1596 61.6011 91.1596 62.4811L98.2058 81.8411C98.6461 81.8411 98.6462 82.7211 97.325 83.1611C97.7654 83.1611 97.7654 83.1611 97.325 83.1611Z"
-            fill="#FFA800"/>
-          <path
-            d="M103.05 83.1611C102.61 83.1611 102.169 82.7211 101.729 82.2811L97.325 62.9211C97.325 62.4811 97.7654 61.6011 98.2058 61.6011C98.6462 61.6011 99.5269 62.0411 99.5269 62.4811L103.931 81.8411C104.371 82.2811 103.931 82.7211 103.05 83.1611C103.49 83.1611 103.49 83.1611 103.05 83.1611Z"
-            fill="#FFA800"/>
-          <path
-            d="M109.215 83.1611C108.775 83.1611 107.894 82.7211 107.894 82.2811L106.133 62.9211C106.133 62.4811 106.573 61.6011 107.013 61.6011C107.454 61.6011 108.335 62.0411 108.335 62.4811L110.096 81.8411C110.096 82.2811 109.656 82.7211 109.215 83.1611Z"
-            fill="#FFA800"/>
-          <path
-            d="M114.94 83.1607C114.06 83.1607 113.619 82.7207 113.619 81.8407L114.5 62.4806C114.5 62.0406 114.94 61.1606 115.821 61.1606C116.262 61.1606 117.142 61.6006 117.142 62.4806L116.262 81.8407C115.821 82.2807 115.381 83.1607 114.94 83.1607Z"
-            fill="#FFA800"/>
-          <path
-            d="M120.665 83.1611C120.665 83.1611 120.225 83.1611 120.665 83.1611C119.785 83.1611 119.344 82.2811 119.344 81.8411L122.867 62.4811C122.867 62.0411 123.748 61.6011 124.188 61.6011C124.629 61.6011 125.069 62.4811 125.069 62.9211L121.546 82.2811C121.546 82.7211 121.106 83.1611 120.665 83.1611Z"
-            fill="#FFA800"/>
-          <path
-            d="M123.308 63.3602H90.2789C89.8385 63.3602 88.9577 62.9202 88.9577 62.0402C88.9577 61.6002 89.3981 60.7202 90.2789 60.7202H123.308C123.748 60.7202 124.629 61.1602 124.629 62.0402C124.629 62.9202 124.188 63.3602 123.308 63.3602Z"
-            fill="#FFA800"/>
-          <path
-            d="M122.427 68.2005H92.0404C91.6 68.2005 90.7192 67.7605 90.7192 66.8805C90.7192 66.4405 91.1596 65.5605 92.0404 65.5605H122.427C122.867 65.5605 123.748 66.0005 123.748 66.8805C123.748 67.7605 123.308 68.2005 122.427 68.2005Z"
-            fill="#FFA800"/>
-          <path
-            d="M121.987 73.0401H94.2423C93.8019 73.0401 92.9212 72.6001 92.9212 71.7201C92.9212 71.2801 93.3616 70.4001 94.2423 70.4001H121.987C122.427 70.4001 123.308 70.8401 123.308 71.7201C122.867 72.6001 122.427 73.0401 121.987 73.0401Z"
-            fill="#FFA800"/>
-          <path
-            d="M121.106 78.3199H95.5635C95.1231 78.3199 94.2423 77.8799 94.2423 76.9999C94.2423 76.5599 94.6827 75.6799 95.5635 75.6799H121.106C121.546 75.6799 122.427 76.1199 122.427 76.9999C122.427 77.4399 121.546 78.3199 121.106 78.3199Z"
-            fill="#FFA800"/>
-          <path
-            d="M120.225 83.1603H97.325C96.8846 83.1603 96.0038 82.7203 96.0038 81.8403C96.0038 81.4003 96.4442 80.5203 97.325 80.5203H120.225C120.665 80.5203 121.546 80.9603 121.546 81.8403C121.546 82.2803 121.106 83.1603 120.225 83.1603Z"
-            fill="#FFA800"/>
-          <path d="M70.4616 0L58.5712 44H81.0308L88.0769 0H70.4616Z" fill="#B1D2EE"/>
-          <path d="M88.0769 0L81.0308 44H103.49L105.692 0H88.0769Z" fill="#EC6795"/>
-          <path d="M52.4058 0L36.5519 44H58.5712L70.4616 0H52.4058Z" fill="#EC6795"/>
-          <path d="M21.1385 0L0 44H14.0923L34.7904 0H21.1385Z" fill="#EC6795"/>
-          <path d="M34.7904 0L14.0923 44H36.5519L52.4058 0H34.7904Z" fill="#B1D2EE"/>
-          <path d="M105.692 0L103.49 44H125.95L123.308 0H105.692Z" fill="#B1D2EE"/>
-          <path d="M229 44L207.862 0H194.65L215.348 44H229Z" fill="#EC6795"/>
-          <path d="M194.65 0H176.594L192.888 44H215.348L194.65 0Z" fill="#B1D2EE"/>
-          <path d="M141.363 0L147.969 44H170.429L158.979 0H141.363Z" fill="#B1D2EE"/>
-          <path d="M158.979 0L170.429 44H192.888L176.594 0H158.979Z" fill="#EC6795"/>
-          <path d="M123.308 0L125.95 44H147.969L141.363 0H123.308Z" fill="#EC6795"/>
-          <path d="M81.0308 44H58.5712V52.36H81.0308V44Z" fill="#7BABD4"/>
-          <path d="M103.49 44H81.0308V52.36H103.49V44Z" fill="#C94263"/>
-          <path d="M125.95 44H103.49V52.36H125.95V44Z" fill="#7BABD4"/>
-          <path d="M14.0923 44H0V52.36H14.0923V44Z" fill="#C94263"/>
-          <path d="M59.0116 44H36.5519V52.36H59.0116V44Z" fill="#C94263"/>
-          <path d="M36.5519 44H14.0923V52.36H36.5519V44Z" fill="#7BABD4"/>
-          <path d="M229.44 44H215.348V52.36H229.44V44Z" fill="#C94263"/>
-          <path d="M215.348 44H192.888V52.36H215.348V44Z" fill="#7BABD4"/>
-          <path d="M192.888 44H170.429V52.36H192.888V44Z" fill="#C94263"/>
-          <path d="M148.41 44H125.95V52.36H148.41V44Z" fill="#C94263"/>
-          <path d="M170.429 44H147.969V52.36H170.429V44Z" fill="#7BABD4"/>
-        </g>
-        <defs>
-          <clipPath id="clip0">
-            <rect width="229" height="154" fill="white"/>
-          </clipPath>
-        </defs>
-      </svg>
       <h3>Pro radost z nakupovani</h3>
       <p>Svou zasilku uz nikdy nezmeskate. Doruci vam ji, i kdyz prave nejste doma. A diky mobilni aplikaci mate o vsem
         prehled.</p>
     </div>
     <div class="mdc-layout-grid__cell">
-      <svg width="203" height="122" viewBox="0 0 203 122" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0)">
-          <path
-            d="M2.31119 103.468H18.1044C18.1044 102.696 18.1044 101.924 18.1044 101.152C18.1044 99.6077 18.1044 98.0633 18.4896 96.519H2.31119V103.468Z"
-            fill="#403068"/>
-          <path
-            d="M114.019 71.0377H2.31119V96.5187H18.4896C20.8008 84.9365 30.8159 76.0567 43.1423 76.0567C55.4687 76.0567 65.4839 84.9365 67.7951 96.5187H114.404V71.0377H114.019Z"
-            fill="#9B8579"/>
-          <path
-            d="M67.4099 96.519C67.7951 98.0633 67.7951 99.6077 67.7951 101.152C67.7951 101.924 67.7951 102.696 67.7951 103.468H114.019V96.519H67.4099Z"
-            fill="#403068"/>
-          <path d="M168.717 32.4302H116.715V71.0378H197.222L181.044 67.9492L168.717 32.4302Z" fill="#EC6795"/>
-          <path
-            d="M116.715 103.468H126.345C126.345 102.696 126.345 101.924 126.345 101.152C126.345 87.639 137.516 76.4428 150.998 76.4428C164.48 76.4428 175.651 87.639 175.651 101.152C175.651 101.924 175.651 102.696 175.651 103.468H197.992V71.0377H117.101V103.468H116.715Z"
-            fill="#C94263"/>
-          <path
-            d="M203 79.9176C203 76.829 201.459 74.1265 199.148 74.1265V85.7087C201.459 86.0948 203 83.3923 203 79.9176Z"
-            fill="#FBB040"/>
-          <path
-            d="M63.5579 101.152C63.5579 112.734 54.3131 122 42.7571 122C31.2011 122 21.9564 112.734 21.9564 101.152C21.9564 89.5698 31.2011 80.304 42.7571 80.304C54.3131 80.304 63.5579 89.5698 63.5579 101.152Z"
-            fill="#403068"/>
-          <path
-            d="M53.1575 101.152C53.1575 106.943 48.5351 111.576 42.7571 111.576C36.9791 111.576 32.3567 106.943 32.3567 101.152C32.3567 95.3608 36.9791 90.7279 42.7571 90.7279C48.5351 90.7279 53.1575 95.3608 53.1575 101.152Z"
-            fill="#DCC172"/>
-          <path
-            d="M171.414 101.152C171.414 112.734 162.169 122 150.613 122C139.057 122 129.812 112.734 129.812 101.152C129.812 89.5698 139.057 80.304 150.613 80.304C162.169 80.304 171.414 89.5698 171.414 101.152Z"
-            fill="#403068"/>
-          <path
-            d="M161.013 101.152C161.013 106.943 156.391 111.576 150.613 111.576C144.835 111.576 140.213 106.943 140.213 101.152C140.213 95.3608 144.835 90.7279 150.613 90.7279C156.391 90.7279 161.013 95.3608 161.013 101.152Z"
-            fill="#DCC172"/>
-          <path d="M165.636 67.9494H132.894V38.6077H156.391L165.636 67.9494Z" fill="#E5E5E5"/>
-          <path d="M181.044 67.9491L172.954 66.0187L163.71 38.6073L171.028 38.2212L181.044 67.9491Z" fill="#E5E5E5"/>
-          <path d="M199.148 71.0377H197.222V103.468H199.148V71.0377Z" fill="#403068"/>
-          <path
-            d="M139.057 72.5823C139.057 73.3544 138.672 73.7405 137.901 73.7405H130.968C130.197 73.7405 129.812 73.3544 129.812 72.5823C129.812 71.8101 130.197 71.4241 130.968 71.4241H137.901C138.672 71.4241 139.057 71.8101 139.057 72.5823Z"
-            fill="#403068"/>
-          <path
-            d="M186.051 76.4427C186.051 77.2149 185.281 77.601 184.51 77.601C183.74 77.601 182.97 77.2149 182.97 76.4427V76.0567C182.97 75.2845 183.74 74.8984 184.51 74.8984C185.281 74.8984 186.051 75.2845 186.051 76.0567V76.4427Z"
-            fill="#F9ED32"/>
-          <path d="M2.3112 84.9368H0V96.133H2.3112V84.9368Z" fill="#C94263"/>
-          <path d="M112.863 0H2.31119V71.424H112.863V0Z" fill="#BC7528"/>
-          <path d="M108.626 3.08887H6.54837V71.4243H108.626V3.08887Z" fill="#D19A4A"/>
-        </g>
-        <defs>
-          <clipPath id="clip0">
-            <rect width="203" height="122" fill="white"/>
-          </clipPath>
-        </defs>
-      </svg>
       <h3>Prijem i odesilani zasilek</h3>
       <p>PostCube vyzvedava a odesila zasilky za vas. Pri objednavce staci zadat jen cislo schranky a pri odesilani
         vyplnit udaje o prijemci.</p>
     </div>
     <div class="mdc-layout-grid__cell">
-      <svg width="127" height="141" viewBox="0 0 127 141" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0)">
-          <path
-            d="M58.8762 0H33.9078V125.915H58.8762C63.8083 125.915 67.8155 121.913 67.8155 116.987V9.23581C67.8155 4.00218 63.8083 0 58.8762 0Z"
-            fill="#403068"/>
-          <path
-            d="M8.93932 0C4.00728 0 0 4.00218 0 8.92795V116.679C0 121.605 4.00728 125.607 8.93932 125.607H33.9078V0H8.93932Z"
-            fill="#367A97"/>
-          <path d="M47.4709 4.92603H20.0364V7.08105H47.4709V4.92603Z" fill="white"/>
-          <path
-            d="M33.9078 122.22C29.9005 122.22 26.5097 118.834 26.5097 114.832C26.5097 110.829 29.9005 107.443 33.9078 107.443C37.9151 107.443 41.3058 110.829 41.3058 114.832C41.3058 118.834 37.9151 122.22 33.9078 122.22ZM33.9078 108.982C30.8253 108.982 28.051 111.753 28.051 114.832C28.051 117.91 30.8253 120.681 33.9078 120.681C36.9903 120.681 39.7646 117.91 39.7646 114.832C39.7646 111.445 36.9903 108.982 33.9078 108.982Z"
-            fill="white"/>
-          <path d="M34.216 13.5457H3.39078V102.825H34.216H64.4248V13.5457H34.216Z" fill="#B1D2EE"/>
-          <path
-            d="M127 121.913L116.828 114.524C116.828 114.524 109.121 91.4345 104.806 88.6638C102.956 86.2009 99.8738 80.3516 98.0243 74.8101C93.4005 68.9607 92.1675 68.0372 86.6189 61.88C81.9951 66.19 84.7694 71.7315 86.6189 77.5808C89.0849 81.583 95.25 86.8166 92.1675 88.9717C88.1602 91.4345 77.0631 80.6594 77.0631 80.6594C69.9733 71.1158 57.3349 55.7228 53.6359 56.3385C52.0946 56.6463 49.3204 58.1856 50.2451 61.2642C51.1699 64.3428 65.0412 80.3516 66.5825 82.8145C72.131 89.5874 61.9587 90.8188 62.267 95.4367C62.5752 99.7468 57.9514 108.367 58.8762 112.677C59.8009 116.987 71.8228 127.454 77.6796 129.609C86.6189 132.688 94.3252 128.993 101.723 134.843C104.498 136.998 107.272 139.461 109.121 141.616C115.903 135.766 122.068 129.301 127 121.913Z"
-            fill="#FFCD94"/>
-        </g>
-        <defs>
-          <clipPath id="clip0">
-            <rect width="127" height="141" fill="white"/>
-          </clipPath>
-        </defs>
-      </svg>
       <h3>Bezkontaktni a jednoduche</h3>
       <p>Kovova PostCube funguje pres Bluetooth. Nepotrebujete kabel, pripojeni k internetu, klic ani si pamatovat PIN
         kod.</p>
     </div>
     <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a href="#contact" class="action-button">Objednat PostCube</a>
+      <a href="#contact" class="btn action-btn">Objednat PostCube</a>
     </div>
   </div>
 </section>
-<section class="mdc-layout-grid">
+<section id="SIG" class="SIG mdc-layout-grid">
+  <div class="mdc-layout-grid__inner layout-wrapper">
+    <div class="SIG__numbers mdc-layout-grid__cell">
+      <p class="users">1024</p>
+      <p>Tolik z vas uz PostCube pouziva a neceka na kuryra.</p>
+    </div>
+    <div
+      class="SIG__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+      <p>Spolupracujeme s nejvetsimi prepravnimi spolecnostmi a e-shopy.</p>
+    </div>
+  </div>
+</section>
+
+
+<section class="quotation mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-      <p>Zasilku vam dorucime v rozmezi 8–18 hodin.</p>
+      <p class="quotation__mark">"</p>
+      <p class="quotation__title">Zasilku vam dorucime v rozmezi 8–18 hodin.</p>
       <p>Tenhle spatny vtip uz neuslysite.</p>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-      <p>Pokus o doruceni nebyl uspesny. Zasilku si vyzvednete na pobocce.</p>
+      <p class="quotation__mark">"</p>
+      <p class="quotation__title">Pokus o doruceni nebyl uspesny. Zasilku si vyzvednete na pobocce.</p>
       <p>Tyhle listecky aby cert vzal!</p>
     </div>
   </div>
 </section>
-<section class="mdc-layout-grid">
+<section class="how-it-works mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
       <h3>Objednejte online</h3>
@@ -397,20 +262,24 @@
       <h3>Odesilejte z boxu</h3>
       <p>Chcete vratit zbozi nebo odeslat zasilku? V aplikaci staci vyplnit udaje a balik vlozit do boxu.</p>
     </div>
+
+    <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <a href="#contact" class="btn action-btn">Objednat PostCube</a>
+    </div>
   </div>
 </section>
-<section class="mdc-layout-grid">
+<section class="download-app mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
       <h2>Aplikace ke stazeni zdarma</h2>
       <p>Stahnete si aplikaci do sveho mobilniho telefonu a stante se panem prijmu i odesilani zasilek. Vstupte do
         sveta, kde se na zasilky neceka!</p>
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <a href="" class="action-button">Stahnout pro Android</a>
+        <div class="btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <a href="" class="download-btn">Stahnout pro Android</a>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <a href="" class="action-button">Stahnout pro iPhone</a>
+        <div class="btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <a href="" class="download-btn">Stahnout pro iPhone</a>
         </div>
       </div>
     </div>
@@ -440,17 +309,18 @@
 
       <div class="contact__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner">
-          <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <div
+            class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3>Dejte nam kontakt a my se ozveme</h3>
             <form>
               <input datatype="Jmeno nebo nazev firmy" id="company-name" type="text">
               <input datatype="Email" id="phone-name" type="text">
               <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-                <button type="submit" class="btn btn__submit">ODESLAT</button>
+                  <button type="submit" class="btn btn__submit">ODESLAT</button>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-                <p>odeslanim formulare souhlasite se zpracovanim osobnich udaju</p>
+                  <p>odeslanim formulare souhlasite se zpracovanim osobnich udaju</p>
                 </div>
               </div>
             </form>
