PostCube - Homepage update

--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -294,19 +294,25 @@
 </section>
 <section class="how-it-works mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+    <div class="after-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286"><defs><style>.a{fill:#1538e5;}</style></defs><path class="a" d="M759.667,3078.567l.434-1.91a1.816,1.816,0,0,0,.047-.422,1.888,1.888,0,0,0-1.888-1.887H737.144l-.515-2.517H759.69a1.889,1.889,0,0,0,1.841-1.474l4.447-18.667-33.472,0-.721-3.525a1.887,1.887,0,0,0-1.846-1.51h-8.066a1.888,1.888,0,0,0-1.888,1.888v1.259a1.888,1.888,0,0,0,1.886,1.888h5.5l5.526,27.019a4.405,4.405,0,1,0,5.274.674h16.5a4.407,4.407,0,1,0,5-.818Zm-15.673-17.583v-5.651h5.9v5.651h5.4l-8.35,8.35-8.35-8.35Z" transform="translate(-719.985 -3046.657)"/></svg>
+      <svg class="after-icon__line" xmlns="http://www.w3.org/2000/svg" width="163.477" height="2" viewBox="0 0 163.477 2"><defs><style>.a{fill:none;stroke:#1538e5;stroke-width:2px;stroke-dasharray:2 2;}</style></defs><path class="a" d="M-1192,2595h163.477" transform="translate(1192 -2594)"/></svg>
       <h3>Objednejte online</h3>
       <p>V e-shopu zadejte cislo sve PostCube,vyberete dopravce a zaplatite.</p>
     </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+    <div class="after-icon link-icon--after-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      <svg class="after-icon__line" xmlns="http://www.w3.org/2000/svg" width="163.477" height="2" viewBox="0 0 163.477 2"><defs><style>.a{fill:none;stroke:#1538e5;stroke-width:2px;stroke-dasharray:2 2;}</style></defs><path class="a" d="M-1192,2595h163.477" transform="translate(1192 -2594)"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662"><defs><style>.a{fill:#1538e5;}</style></defs><path class="a" d="M792.936,2978.994h-.1v-8.632l-4.686-10.252h-9.518v-3.48a3.356,3.356,0,0,0-.034-.334v-3.2H748.036v23.7h-.016v6.907h4.724a7.062,7.062,0,0,0,14.124-.005h9.416a7.062,7.062,0,0,0,14.124,0h2.528a1.182,1.182,0,0,0,1.177-1.177v-2.351A1.182,1.182,0,0,0,792.936,2978.994Zm-33.13,8.239a3.531,3.531,0,1,1,3.53-3.534A3.53,3.53,0,0,1,759.806,2987.233Zm23.542,0h0a3.531,3.531,0,1,1,3.531-3.534A3.531,3.531,0,0,1,783.347,2987.233Zm5.884-15.3h-10.6v-8.241h7.244l3.356,7.349Z" transform="translate(-748.02 -2953.099)"/></svg>
       <h3>Prijede kuryr</h3>
       <p>Pomoci jednorazoveho kodu kuryr otevre box a vlozi do nej zasilku.</p>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="53.745" height="37.474" viewBox="0 0 53.745 37.474"><defs><style>.a{fill:#1538e5;}</style></defs><g transform="translate(-640.35 -2908.852)"><path class="a" d="M667.223,2911.974l8.391,12.654,18.482-5.208-6.075-10.568-20.8,2.924-20.8-2.924-6.075,10.568,18.482,5.208Z"/><path class="a" d="M667.256,2916.663l-6.841,10.772-14.027-3.88v17.1l20.869,5.667,20.869-5.667v-17.1l-14.027,3.88Z"/></g></svg>
       <h3>Zasilku vyzvednete</h3>
       <p>Okamzite vam prijde upozorneni o doruceni baliku, ktery na vas ve schrance ceka.</p>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38"><defs><style>.a{fill:#1538e5;}.b{fill:#fff;stroke:rgba(0,0,0,0);stroke-miterlimit:10;}</style></defs><g transform="translate(-1074 -2777)"><g transform="translate(-40)"><path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z" transform="translate(827.022 2611.741)"/><path class="b" d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z" transform="translate(1123.686 928.686)"/></g></g></svg>
       <h3>Odesilejte z boxu</h3>
       <p>Chcete vratit zbozi nebo odeslat zasilku? V aplikaci staci vyplnit udaje a balik vlozit do boxu.</p>
     </div>
@@ -380,6 +386,14 @@
         <h3>Nebo se nas<br>rovnou zeptejte</h3>
         <a class="info--number">+421 603 666 420</a>
         <a class="info--email">info@postcube.cz</a>
+        <div class="social-buttons">
+          <a href="" title="PostCube on Facebook" rel="me" class="facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" width="34.588" height="34.379" viewBox="0 0 34.588 34.379"><defs><style>.a{fill:#fff;}</style></defs><path class="a" d="M42.588,25.294a17.294,17.294,0,1,0-20,17.085V30.293H18.2v-5h4.393v-3.81c0-4.334,2.58-6.728,6.532-6.728A26.615,26.615,0,0,1,33,15.093v4.254H30.814A2.5,2.5,0,0,0,28,22.048v3.246h4.8l-.767,5H28V42.379A17.3,17.3,0,0,0,42.588,25.294Z" transform="translate(-8 -8)"/></svg>
+          </a>
+          <a href="" title="PostCube on Instagram" rel="me" class="instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" width="34.179" height="34.171" viewBox="0 0 34.179 34.171"><defs><style>.a{fill:#fff;}</style></defs><path class="a" d="M17.018,40.149a8.761,8.761,0,1,0,8.761,8.761A8.747,8.747,0,0,0,17.018,40.149Zm0,14.457a5.7,5.7,0,1,1,5.7-5.7,5.706,5.706,0,0,1-5.7,5.7ZM28.181,39.791a2.043,2.043,0,1,1-2.043-2.043A2.039,2.039,0,0,1,28.181,39.791Zm5.8,2.074c-.13-2.737-.755-5.162-2.76-7.16s-4.422-2.623-7.16-2.76c-2.821-.16-11.277-.16-14.1,0A10.165,10.165,0,0,0,2.805,34.7C.8,36.7.182,39.12.045,41.857c-.16,2.821-.16,11.277,0,14.1.13,2.737.755,5.162,2.76,7.16a10.192,10.192,0,0,0,7.16,2.76c2.821.16,11.277.16,14.1,0,2.737-.13,5.162-.755,7.16-2.76s2.623-4.422,2.76-7.16C34.144,53.135,34.144,44.686,33.984,41.865ZM30.339,58.983a5.767,5.767,0,0,1-3.248,3.248c-2.249.892-7.587.686-10.073.686s-7.831.2-10.073-.686A5.767,5.767,0,0,1,3.7,58.983c-.892-2.249-.686-7.587-.686-10.072s-.2-7.831.686-10.072A5.767,5.767,0,0,1,6.946,35.59c2.249-.892,7.587-.686,10.073-.686s7.831-.2,10.073.686a5.767,5.767,0,0,1,3.248,3.248c.892,2.249.686,7.587.686,10.072S31.231,56.741,30.339,58.983Z" transform="translate(0.075 -31.825)"/></svg>
+          </a>
+        </div>
       </div>
     </div>
   </div>
