--- a/chytrybox.cz/src/html/SK/index.html
+++ b/chytrybox.cz/src/html/SK/index.html
@@ -122,7 +122,7 @@
             <li class=""><a href="#how-it-works">Jak box funguje</a></li>
             <li class=""><a href="#contact">Kontakt</a></li>
             <li class=""><a class="list__btn" href="">Objednat box</a></li>
-            <li class=""><a class="list__lang--cz" href="">CZ</a><a class="list__lang--sk" href="/SK">SK</a></li>
+            <li class=""><a class="list__lang--cz" style="color: var(--postcube-grey);" href="">CZ</a><a class="list__lang--sk" style="color: var(--postcube-black);" href="">SK</a></li>
           </ul>
         </nav>
       </div>
@@ -187,7 +187,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
       </div>
       <div class="intro__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h1>Nečekejte na kurýra</h1>
+        <h1>Slovenská stránka Nečekejte na kurýra</h1>
         <p>Je spousta lepsich cinnosti nez cekani na kuryra. S chytrou schrankou PostCube si zasilku vyzvednete, az vy
           budete chtit!</br>
           <b>#necekamnakuryra</b></p>
@@ -271,7 +271,7 @@
     </div>
     <div
       class="SIG__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
-      <img alt="Loga clientů" src="assets/img/clients.png" height="80px">
+      <img src="assets/img/clients.png" height="80px">
       <p>Spolupracujeme s nejvetsimi prepravnimi spolecnostmi a e-shopy.</p>
     </div>
   </div>
@@ -575,8 +575,8 @@
       <div
         class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Nebo se nas<br>rovnou zeptejte</h3>
-        <a property="telephone" href="tel:+421603666420" class="info--number">+421 603 666 420</a>
-        <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
+        <a class="info--number">+421 603 666 420</a>
+        <a class="info--email">info@postcube.cz</a>
         <div class="social-buttons">
           <a href="" title="PostCube on Facebook" rel="me" class="facebook">
             <svg xmlns="http://www.w3.org/2000/svg" width="34.588" height="34.379" viewBox="0 0 34.588 34.379">
