--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -59,16 +59,8 @@
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div
-        class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
-        <div class="hamburger__container">
-          <div class="hamburger__bar"></div>
-          <div class="hamburger__bar"></div>
-          <div class="hamburger__bar"></div>
-        </div>
-      </div>
-      <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
-        <a class="logo" href="/" title="Go to homepage">
+        <a class="logo logo--desktop" href="/" title="Go to homepage">
           <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
             <defs>
               <style>.a {
@@ -113,6 +105,16 @@
             </g>
           </svg>
         </a>
+        <a class="logo logo--phone" href="/" title="Go to homepage">
+          <svg xmlns="http://www.w3.org/2000/svg" width="65" height="64.999" viewBox="0 0 65 64.999"><defs><style>.a{fill:#1538e5;}.b{fill:#fff;}</style></defs><g transform="translate(-140 -20)"><g transform="translate(140 20)"><path class="a" d="M286.978,165.259v43.333l21.667,21.666h43.333V186.925l-21.667-21.666Z" transform="translate(-286.978 -165.259)"/><g transform="translate(2.71 27.301)"><path class="b" d="M298.133,288.283V278.118h4.182a3.216,3.216,0,1,1,0,6.419h-1.989v3.747Zm2.193-5.562h1.859a1.4,1.4,0,1,0,0-2.788h-1.859Z" transform="translate(-298.133 -278.002)"/><path class="b" d="M328.077,293.132a3.864,3.864,0,1,1,3.863,3.776A3.693,3.693,0,0,1,328.077,293.132Zm5.693,0a1.84,1.84,0,1,0-1.83,2.033A1.849,1.849,0,0,0,333.77,293.132Z" transform="translate(-320.803 -286.51)"/><path class="b" d="M360.266,294.323h1.743a1.209,1.209,0,0,0,1.336,1.06c.625,0,1.06-.3,1.06-.711,0-1.5-3.935-.029-3.935-3.108a2.358,2.358,0,0,1,2.614-2.207c1.757,0,2.948.944,3.021,2.382h-1.757a1.162,1.162,0,0,0-1.205-.959c-.566,0-.958.247-.958.712,0,1.5,4.008-.2,4.008,3.108,0,1.394-1.133,2.309-2.846,2.309C361.558,296.908,360.339,295.906,360.266,294.323Z" transform="translate(-345.172 -286.51)"/><path class="b" d="M386.231,280.927h2.018v2.164h1.96v1.684h-1.96v2.759a.926.926,0,0,0,1.031,1.046h.929v1.83H389a2.5,2.5,0,0,1-2.774-2.657v-2.977h-1.409v-1.684h1.409Z" transform="translate(-363.763 -280.128)"/><path class="b" d="M408.1,282.838a4.878,4.878,0,0,1,5.1-5.2c2.556,0,4.429,1.452,4.705,3.645h-2.28a2.251,2.251,0,0,0-2.425-1.772c-1.641,0-2.9,1.147-2.9,3.325s1.263,3.311,2.9,3.311a2.319,2.319,0,0,0,2.483-1.757h2.178c-.189,2.178-2.062,3.645-4.662,3.645A4.856,4.856,0,0,1,408.1,282.838Z" transform="translate(-381.384 -277.639)"/><path class="b" d="M457.133,289.834v7.319H455.1v-1.016a2.485,2.485,0,0,1-2.222,1.133,2.667,2.667,0,0,1-2.716-2.876v-4.56h2.019v4.11a1.414,1.414,0,0,0,1.408,1.525,1.521,1.521,0,0,0,1.511-1.627v-4.008Z" transform="translate(-413.23 -286.871)"/><path class="b" d="M520.815,294.308a3.3,3.3,0,0,1-3.485,2.6,3.67,3.67,0,0,1-3.761-3.79,3.519,3.519,0,0,1,3.616-3.761,3.411,3.411,0,0,1,3.616,3.573c0,.276-.015.494-.029.653h-5.257a1.756,1.756,0,0,0,1.815,1.67c.813,0,1.35-.32,1.51-.944Zm-5.272-2h3.238a1.627,1.627,0,0,0-3.238,0Z" transform="translate(-461.232 -286.51)"/><path class="b" d="M485.773,281.494a2.473,2.473,0,0,0-2.033.886v-3.409h-2.018v9.958h2.018v-.8a2.448,2.448,0,0,0,2,.915c2.164,0,3.456-1.5,3.456-3.776S487.907,281.494,485.773,281.494Zm-.349,5.809a2.058,2.058,0,1,1,1.786-2.033A1.816,1.816,0,0,1,485.424,287.3Z" transform="translate(-437.122 -278.648)"/></g></g></g></svg>        </a>
+      </div>
+      <div
+        class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
+        <div class="hamburger__container">
+          <div class="hamburger__bar"></div>
+          <div class="hamburger__bar"></div>
+          <div class="hamburger__bar"></div>
+        </div>
       </div>
       <div
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
@@ -182,6 +184,8 @@
 
 
 <section id="intro" class="intro">
+  <img alt="Fotka kurýra doručující PostCube" src="/assets/img/deliveryman.jpg">
+
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -280,13 +284,13 @@
 
 <section class="quotation mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-      <p class="quotation__mark">"</p>
+    <div class="quotation__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <p class="content--mark">"</p>
       <h2>Zasilku vam dorucime v rozmezi 8–18 hodin.</h2>
       <p>Tenhle spatny vtip uz neuslysite.</p>
     </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-      <p class="quotation__mark">"</p>
+    <div class="quotation__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <p class="content--mark">"</p>
       <h2>Pokus o doruceni nebyl uspesny. Zasilku si vyzvednete na pobocce.</h2>
       <p>Tyhle listecky aby cert vzal!</p>
     </div>
@@ -399,7 +403,7 @@
 </section>
 <section class="download-app mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
       <h2>Aplikace ke stazeni zdarma</h2>
       <p>Stahnete si aplikaci do sveho mobilniho telefonu a stante se panem prijmu i odesilani zasilek. Vstupte do
         sveta, kde se na zasilky neceka!</p>
@@ -434,10 +438,10 @@
             <h3>Je mozne postovni box sdilet s nekym jinym?</h3>
           </a>
           <div class="answer">
-           <p>Ano. Muzete si napriklad poridit jeden spolecny postovni box se sousedem a náklady na jeho porizeni si
-            rozdelit mezi sebou. Vyplati se to zvlast tehdy, kdyz si z e-shopu objednavate jen jednou za cas, ale i
-            presto
-             chcete mit zmineny komfort a necekat na kuryra nebo objizdet vydejni mista, kdyz vas doma nezastihne.</p>
+            <p>Ano. Muzete si napriklad poridit jeden spolecny postovni box se sousedem a náklady na jeho porizeni si
+              rozdelit mezi sebou. Vyplati se to zvlast tehdy, kdyz si z e-shopu objednavate jen jednou za cas, ale i
+              presto
+              chcete mit zmineny komfort a necekat na kuryra nebo objizdet vydejni mista, kdyz vas doma nezastihne.</p>
             <a class="remove">Skrýt</a>
           </div>
         </div>
@@ -531,7 +535,7 @@
       <div class="accordion">
         <div class="accordion-item accordion-item--close" id="question8">
           <a class="accordion-link" href="#question8">
-           <h3>Je mozne postovni box sdilet s nekym jinym?</h3>
+            <h3>Je mozne postovni box sdilet s nekym jinym?</h3>
           </a>
           <div class="answer">
             <p>Ano. Muzete si napriklad poridit jeden spolecny postovni box se sousedem a náklady na jeho porizeni si
@@ -562,10 +566,10 @@
           <input datatype="Jmeno nebo nazev firmy" placeholder="Jmeno nebo nazev firmy" id="company-name" type="text">
           <input datatype="Email" id="phone-name" placeholder="Email" type="text">
           <div class="mdc-layout-grid__inner">
-            <div class="submit-button mdc-layout-grid__cell">
+            <div class="submit-button mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
               <button type="submit" class="">ODESLAT</button>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
               <p>Odeslanim formulare souhlasite se zpracovanim osobnich udaju.</p>
             </div>
           </div>
@@ -574,7 +578,7 @@
 
       <div
         class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Nebo se nas<br>rovnou zeptejte</h3>
+        <h3>Nebo se nas rovnou zeptejte</h3>
         <a property="telephone" href="tel:+421603666420" class="info--number">+421 603 666 420</a>
         <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
         <div class="social-buttons">
