--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -203,63 +203,15 @@
 <section id="about-postCube" class="about-postCube mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell">
-      <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="50" viewBox="0 0 30.412 48.659">
-        <defs>
-          <style>.a {
-            fill: #1538e5;
-          }</style>
-        </defs>
-        <g transform="translate(-297.293 -654.072)">
-          <path class="a"
-                d="M25.85,0H4.562A4.563,4.563,0,0,0,0,4.562V44.1a4.563,4.563,0,0,0,4.562,4.562H25.85A4.563,4.563,0,0,0,30.412,44.1V4.562A4.563,4.563,0,0,0,25.85,0ZM15.206,45.618a3.041,3.041,0,1,1,3.041-3.041A3.038,3.038,0,0,1,15.206,45.618ZM25.85,35.354a1.144,1.144,0,0,1-1.14,1.14H5.7a1.144,1.144,0,0,1-1.14-1.14V5.7A1.144,1.144,0,0,1,5.7,4.562H24.71A1.144,1.144,0,0,1,25.85,5.7Z"
-                transform="translate(297.293 654.072)"/>
-          <path class="a"
-                d="M14.252,9.036H5.974l.185.9h7.579a.678.678,0,0,1,.661.828l-.156.685a1.582,1.582,0,1,1-1.8.294H6.528A1.581,1.581,0,1,1,4.634,11.5l-1.984-9.7H.678A.678.678,0,0,1,0,1.129V.678A.678.678,0,0,1,.678,0h2.9a.678.678,0,0,1,.664.542L4.5,1.807H15.586a.678.678,0,0,1,.661.828L14.912,8.508A.678.678,0,0,1,14.252,9.036Z"
-                transform="translate(303.553 667.774)"/>
-        </g>
-      </svg>
-      <h3>Pro radost z nakupovani</h3>
-      <p>Svou zasilku uz nikdy nezmeskate. Doruci vam ji, i kdyz prave nejste doma. A diky mobilni aplikaci mate o vsem
+      <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="48.659" viewBox="0 0 30.412 48.659"><defs><style>.a{fill:#1538e5;}</style></defs><g transform="translate(-297.293 -654.072)"><path class="a" d="M25.85,0H4.562A4.563,4.563,0,0,0,0,4.562V44.1a4.563,4.563,0,0,0,4.562,4.562H25.85A4.563,4.563,0,0,0,30.412,44.1V4.562A4.563,4.563,0,0,0,25.85,0ZM15.206,45.618a3.041,3.041,0,1,1,3.041-3.041A3.038,3.038,0,0,1,15.206,45.618ZM25.85,35.354a1.144,1.144,0,0,1-1.14,1.14H5.7a1.144,1.144,0,0,1-1.14-1.14V5.7A1.144,1.144,0,0,1,5.7,4.562H24.71A1.144,1.144,0,0,1,25.85,5.7Z" transform="translate(297.293 654.072)"/><path class="a" d="M14.252,9.036H5.974l.185.9h7.579a.678.678,0,0,1,.661.828l-.156.685a1.582,1.582,0,1,1-1.8.294H6.528A1.581,1.581,0,1,1,4.634,11.5l-1.984-9.7H.678A.678.678,0,0,1,0,1.129V.678A.678.678,0,0,1,.678,0h2.9a.678.678,0,0,1,.664.542L4.5,1.807H15.586a.678.678,0,0,1,.661.828L14.912,8.508A.678.678,0,0,1,14.252,9.036Z" transform="translate(303.553 667.774)"/></g></svg>      <p>Svou zasilku uz nikdy nezmeskate. Doruci vam ji, i kdyz prave nejste doma. A diky mobilni aplikaci mate o vsem
         prehled.</p>
     </div>
     <div class="mdc-layout-grid__cell">
-      <svg xmlns="http://www.w3.org/2000/svg" width="38" height="50" viewBox="0 0 38 38">
-        <defs>
-          <style>.a {
-            fill: #1538e5;
-          }
-
-          .b {
-            fill: #fff;
-            stroke: rgba(0, 0, 0, 0);
-            stroke-miterlimit: 10;
-          }</style>
-        </defs>
-        <g transform="translate(-661 -658)">
-          <path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z"
-                transform="translate(374.022 492.741)"/>
-          <path class="b"
-                d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z"
-                transform="translate(670.686 -1190.314)"/>
-        </g>
-      </svg>
-      <h3>Prijem i odesilani zasilek</h3>
-      <p>PostCube vyzvedava a odesila zasilky za vas. Pri objednavce staci zadat jen cislo schranky a pri odesilani
+      <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38"><defs><style>.a{fill:#1538e5;}.b{fill:#fff;stroke:rgba(0,0,0,0);stroke-miterlimit:10;}</style></defs><g transform="translate(-661 -658)"><path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z" transform="translate(374.022 492.741)"/><path class="b" d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z" transform="translate(670.686 -1190.314)"/></g></svg>      <p>PostCube vyzvedava a odesila zasilky za vas. Pri objednavce staci zadat jen cislo schranky a pri odesilani
         vyplnit udaje o prijemci.</p>
     </div>
     <div class="mdc-layout-grid__cell">
-      <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="50" viewBox="0 0 23.835 45.402">
-        <defs>
-          <style>.a {
-            fill: #1538e5;
-          }</style>
-        </defs>
-        <path class="a"
-              d="M40.76,23.058l8.214-9.163L36.029,0V18.3l-7.636-7.636-2.785,2.785,9.582,9.612L25.608,32.67l2.785,2.785,7.636-7.636L36.27,45.4,49.443,32.221Zm3.623-9.133-4.432,4.432-.03-8.894ZM39.952,27.759l4.432,4.432-4.462,4.462Z"
-              transform="translate(-25.608)"/>
-      </svg>
-      <h3>Bezkontaktni a jednoduche</h3>
-      <p>Kovova PostCube funguje pres Bluetooth. Nepotrebujete kabel, pripojeni k internetu, klic ani si pamatovat PIN
+      <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="45.402" viewBox="0 0 23.835 45.402"><defs><style>.a{fill:#1538e5;}</style></defs><path class="a" d="M40.76,23.058l8.214-9.163L36.029,0V18.3l-7.636-7.636-2.785,2.785,9.582,9.612L25.608,32.67l2.785,2.785,7.636-7.636L36.27,45.4,49.443,32.221Zm3.623-9.133-4.432,4.432-.03-8.894ZM39.952,27.759l4.432,4.432-4.462,4.462Z" transform="translate(-25.608)"/></svg>      <p>Kovova PostCube funguje pres Bluetooth. Nepotrebujete kabel, pripojeni k internetu, klic ani si pamatovat PIN
         kod.</p>
     </div>
     <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
