--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -250,8 +250,7 @@
 </section>
 <section class="how-it-works mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
-    <div
-      class="after-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+    <div class="after-icon mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286">
         <defs>
           <style>.a {
